fpp_analysis/src/test/enums/undef_constant_2.ref.txt
error: undefined symbol
 --> [ local path prefix ]/enums/undef_constant_2.fpp:2:16
  |
2 | constant a = E.X
  |                ^ cannot find constant `X` in scope

 --> [ local path prefix ]/enums/undef_constant_2.fpp:1:1
  |
1 | enum E { }
  | ^^^^^^^^^^ enum must define at least one constant

 --> [ local path prefix ]/enums/undef_constant_2.fpp:2:14
  |
2 | constant a = E.X
  |              ^ not a constant symbol
  |
 ::: [ local path prefix ]/enums/undef_constant_2.fpp:1:6
  |
1 | enum E { }
  |      - E defined here

